--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,10 @@ node_modules
 .env.local
 .env.*.local
 
+/node_modules
+npm-debug.log
+.DS_Store
+/*.env
 # Log files
 npm-debug.log*
 yarn-debug.log*
